style.css
body {
    font-family: 'Helvetica', sans-serif;
    /*background-color: #542988; */
    color: #212121;
}

#container {
	margin-left: 25px;
}

h1 {
	margin-bottom: 10px;
	color: #212121;
	font-weight: 500;
}

p {
	margin-top: 0px;
	margin-bottom: 10px;
	font-size: 18px;
}

a {
    cursor: pointer;
    text-decoration: none;

    -webkit-transition: 0.15s color ease;
       -moz-transition: 0.15s color ease;
        -ms-transition: 0.15s color ease;
         -o-transition: 0.15s color ease;
            transition: 0.15s color ease;
}
a {
    color: #845fb4;
}

a:hover {
    color: #B39DDB;
}

#author {
    color: #bdc3c7;
    font-size: 16px;
}

.border button {
  font-size: 14px;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 10px;
  padding-right: 15px;
  padding-left: 15px;
  color: #845fb4;
  background: #ffffff;
  border: solid 1px #845fb4;
  border-radius: 4px;

    -webkit-transition: 0.35s color ease, 0.35s background-color ease;
       -moz-transition: 0.35s color ease, 0.35s background-color ease;
        -ms-transition: 0.35s color ease, 0.35s background-color ease;
         -o-transition: 0.35s color ease, 0.35s background-color ease;
            transition: 0.35s color ease, 0.35s background-color ease;


}

.border button:hover,
.border button.hover {
  border-color: #B39DDB;
  background-color: #B39DDB;
  color: #ffffff;
    cursor: pointer;
}

.border button:active {
  color: #ffffff;
}

.border button:focus {
    outline: none;
}

.depth1 {
    font-size: 20px;
}

